CHANGELOG

0.4.0 (in progress)
* removed default values from all column types
* explicit primary key is required (automatic id removed)
* added validation on keyname types on .create()

0.3.3
* added abstract base class models

0.3.2
* comprehesive rewrite of connection management (thanks @rustyrazorblade)

0.3
* added support for Token function (thanks @mrk-its)
* added support for compound partition key (thanks @mrk-its)s
* added support for defining clustering key ordering (thanks @mrk-its)
* added values_list to Query class, bypassing object creation if desired (thanks @mrk-its)
* fixed bug with Model.objects caching values (thanks @mrk-its)
* fixed Cassandra 1.2.5 compatibility bug
* updated model exception inheritance

0.2.1
* adding support for datetimes with tzinfo (thanks @gdoermann)
* fixing bug in saving map updates (thanks @pandu-rao)

0.2
* expanding internal save function to use update where appropriate
* adding set, list, and map collection types
* adding support for allow filtering flag
* updating management functions to work with cassandra 1.2
* fixed a bug querying datetimes
* modifying datetime serialization to preserve millisecond accuracy
* adding cql function call generators MaxTimeUUID and MinTimeUUID

0.1.1
* fixed a bug occurring when creating tables from the REPL

0.1
* added min_length and max_length validators to the Text column
* added == and != equality operators to model class
* fixed bug with default values that would evaluate to False (ie: 0, '')

0.0.9
* fixed column inheritance bug
* manually defined table names are no longer inherited by subclasses

0.0.8
* added configurable read repair chance to model definitions
* added configurable keyspace strategy class and replication factor to keyspace creator

0.0.7
* fixed manual table name bug
* changed model level db_name field to table_name

0.0.6
* added TimeUUID column

0.0.5
* added connection pooling
* adding a few convenience query classmethods to the model class

0.0.4-ALPHA